<resources>
    <string name="app_name">My Agenda</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="person_list_fragment_label">Person List</string>
    <string name="person_edit_fragment_label">Person Edit</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>

    <string name="person_list_fragment">Person list fragment</string>
    <string name="person_edit_fragment">Person edit fragment</string>
    <string name="input_nume">Nume</string>
    <string name="input_prenume">Prenume</string>
    <string name="input_telefon">Telefon</string>
    <string name="input_ocupatie">Ocupatie</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be not empty</string>

    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
</resources>