<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PersonListFragment">

    <fragment
        android:id="@+id/fragment_login"
        android:name="ro.ubbcluj.scs.bdir2463.androidapp.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/PersonListFragment"
        android:name="ro.ubbcluj.scs.bdir2463.androidapp.todo.persons.PersonListFragment"
        android:label="@string/person_list_fragment_label"
        tools:layout="@layout/fragment_person_list">

        <action
            android:id="@+id/action_PersonListFragment_to_PersonEditFragment"
            app:destination="@id/PersonEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/PersonEditFragment"
        android:name="ro.ubbcluj.scs.bdir2463.androidapp.todo.person.PersonEditFragment"
        android:label="@string/person_edit_fragment_label"
        tools:layout="@layout/fragment_person_edit">

        <action
            android:id="@+id/action_PersonEditFragment_to_PersonListFragment"
            app:destination="@id/PersonListFragment" />
    </fragment>
</navigation>